LoginRegister Profile UI done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Jobbu</string>
+    <string name="register_title">Register</string>
+    <string name="profile_title">Profile</string>
 </resources>
