--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,21 @@
     <string name="app_name">Jobbu</string>
     <string name="register_title">Register</string>
     <string name="profile_title">Profile</string>
+    <string name="edit_title">Edit Profile</string>
+
+    <string-array name="Gender">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+
+    <string-array name="JobType">
+        <item>Full Time</item>
+        <item>Part-Time</item>
+    </string-array>
+
+    <string-array name="Level">
+        <item>Degree</item>
+        <item>Diploma</item>
+    </string-array>
+
 </resources>
