--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Jobbu</string>
     <string name="register_title">Register</string>
     <string name="profile_title">Profile</string>
+    <string name="profile_name" />
 </resources>
